feat: add complete project structure, documentation, and initial files
Agent-Logs-Url: https://github.com/Sebasr0311/sistema-administracion-edificios/sessions/6f4baae0-dd9d-490f-b82e-4be61a3bde65

Co-authored-by: Sebasr0311 <212182320+Sebasr0311@users.noreply.github.com>